basic_console/sn-platform/templates/control-center/control-center-ingress.yaml
---
# Source: sn-platform/templates/control-center/control-center-ingress.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "test-sn-platform-control-center-ingress"
  namespace: pulsar
  labels:
    app: sn-platform
    chart: sn-platform-1.5.4
    release: test
    heritage: Helm
    cluster: test-sn-platform
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: "test-sn-platform-streamnative-console"
                port: 
                  number: 9527
